...
      self.multipleTouchEnabled = YES;
      self.backgroundColor = [UIColor whiteColor];
      self.accessibilityIdentifier = @"metalView";

      CAMetalLayer *layer = (CAMetalLayer *)self.layer;
...
      [seg addTarget:self action:@selector(sceneChanged:) forControlEvents:UIControlEventValueChanged];
   }
   seg.accessibilityIdentifier = @"sceneControl";
   self.sceneControl = seg;

...
   overlaySwitch.on = YES;
   [overlaySwitch addTarget:self action:@selector(onOverlaySwitch:) forControlEvents:UIControlEventValueChanged];
   overlaySwitch.accessibilityIdentifier = @"overlaySwitch";
   self.overlaySwitch = overlaySwitch;

...
   reduceSwitch.on = NO;
   [reduceSwitch addTarget:self action:@selector(onReduceMotionSwitch:) forControlEvents:UIControlEventValueChanged];
   reduceSwitch.accessibilityIdentifier = @"reduceMotionSwitch";
   self.reduceSwitch = reduceSwitch;

...
   imeView.layer.borderColor = [UIColor colorWithWhite:0.8 alpha:1.0].CGColor;
   imeView.layer.cornerRadius = 4.0;
   imeView.accessibilityIdentifier = @"imeTextView";
   imeView.backgroundColor = [UIColor colorWithWhite:1.0 alpha:0.95];
   imeView.text = @"";
...
   UIButton *imeCopy = [UIButton buttonWithType:UIButtonTypeSystem];
   [imeCopy setTitle:@"Copy" forState:UIControlStateNormal];
   imeCopy.accessibilityIdentifier = @"imeCopyButton";
   [imeCopy addTarget:self action:@selector(onImeCopy:) forControlEvents:UIControlEventTouchUpInside];

   UIButton *imePaste = [UIButton buttonWithType:UIButtonTypeSystem];
   [imePaste setTitle:@"Paste" forState:UIControlStateNormal];
   imePaste.accessibilityIdentifier = @"imePasteButton";
   [imePaste addTarget:self action:@selector(onImePaste:) forControlEvents:UIControlEventTouchUpInside];

   UIButton *imeHaptic = [UIButton buttonWithType:UIButtonTypeSystem];
   [imeHaptic setTitle:@"Haptic" forState:UIControlStateNormal];
   imeHaptic.accessibilityIdentifier = @"imeHapticButton";
   [imeHaptic addTarget:self action:@selector(onImeHaptic:) forControlEvents:UIControlEventTouchUpInside];

...
   animPlay.on = YES;
   [animPlay addTarget:self action:@selector(onAnimPlay:) forControlEvents:UIControlEventValueChanged];
   animPlay.accessibilityIdentifier = @"animationPlaySwitch";
   self.animPlaySwitch = animPlay;

...
   animPhase.value = 0.0f;
   [animPhase addTarget:self action:@selector(onAnimPhase:) forControlEvents:UIControlEventValueChanged];
   animPhase.accessibilityIdentifier = @"animationPhaseSlider";
   self.animPhaseSlider = animPhase;

...
   damageSwitch.on = NO;
   [damageSwitch addTarget:self action:@selector(onDamageEnable:) forControlEvents:UIControlEventValueChanged];
   damageSwitch.accessibilityIdentifier = @"damageEnableSwitch";
   self.damageEnableSwitch = damageSwitch;

...
   damageUse.value = 0.70f;
   [damageUse addTarget:self action:@selector(onDamageUse:) forControlEvents:UIControlEventValueChanged];
   damageUse.accessibilityIdentifier = @"damageUseSlider";
   self.damageUseSlider = damageUse;

...
   damagePref.value = 0.25f;
   [damagePref addTarget:self action:@selector(onDamagePref:) forControlEvents:UIControlEventValueChanged];
   damagePref.accessibilityIdentifier = @"damagePrefSlider";
   self.damagePrefSlider = damagePref;

...
   nineSlice.value = 16.0f;
   [nineSlice addTarget:self action:@selector(onNineSlice:) forControlEvents:UIControlEventValueChanged];
   nineSlice.accessibilityIdentifier = @"nineSliceSlider";
   self.nineSliceSlider = nineSlice;

...
   nineAlpha.value = 1.0f;
   [nineAlpha addTarget:self action:@selector(onNineAlpha:) forControlEvents:UIControlEventValueChanged];
   nineAlpha.accessibilityIdentifier = @"nineAlphaSlider";
   self.nineAlphaSlider = nineAlpha;

...
   sdfSlider.value = 32.0f;
   [sdfSlider addTarget:self action:@selector(onSdfFont:) forControlEvents:UIControlEventValueChanged];
   sdfSlider.accessibilityIdentifier = @"sdfFontSlider";
   self.sdfSlider = sdfSlider;

...
   UIButton *snapshotButton = [UIButton buttonWithType:UIButtonTypeSystem];
   [snapshotButton setTitle:@"Capture Snapshot" forState:UIControlStateNormal];
   snapshotButton.accessibilityIdentifier = @"snapshotButton";
   [snapshotButton addTarget:self action:@selector(onSnapshotButton:) forControlEvents:UIControlEventTouchUpInside];
   self.snapshotButton = snapshotButton;
...
   camBlur.on = YES;
   [camBlur addTarget:self action:@selector(onCamBlur:) forControlEvents:UIControlEventValueChanged];
   camBlur.accessibilityIdentifier = @"cameraBlurSwitch";
   self.camBlurSwitch = camBlur;
   UISwitch *camGray = [UISwitch new];
   camGray.on = NO;
   [camGray addTarget:self action:@selector(onCamGray:) forControlEvents:UIControlEventValueChanged];
   camGray.accessibilityIdentifier = @"cameraGraySwitch";
   self.camGraySwitch = camGray;
   UISwitch *camAnim = [UISwitch new];
   camAnim.on = YES;
   [camAnim addTarget:self action:@selector(onCamAnim:) forControlEvents:UIControlEventValueChanged];
   camAnim.accessibilityIdentifier = @"cameraAnimateSwitch";
   self.camAnimSwitch = camAnim;
   UISwitch *camCapture = [UISwitch new];
   camCapture.on = YES;
   [camCapture addTarget:self action:@selector(onCamCapture:) forControlEvents:UIControlEventValueChanged];
   camCapture.accessibilityIdentifier = @"cameraCaptureSwitch";
   self.camCaptureSwitch = camCapture;
   UILabel *sigmaLbl = [UILabel new];
...
   sigma.value = 6.0f;
   [sigma addTarget:self action:@selector(onCamSigma:) forControlEvents:UIControlEventValueChanged];
   sigma.accessibilityIdentifier = @"cameraSigmaSlider";
   self.camSigmaSlider = sigma;

...
   camMetrics.numberOfLines = 2;
   camMetrics.text = @"Cam 0x0 bd=0 mx=709 rng=full cov=0% fps=0.0 paused=yes";
   camMetrics.accessibilityIdentifier = @"cameraMetricsLabel";
   self.camMetricsLabel = camMetrics;
   UIStackView *camMetricsRow = [[UIStackView alloc] initWithArrangedSubviews:@[camMetrics]];
...
  status.text = @"";
  status.numberOfLines = 2;
  status.accessibilityIdentifier = @"statusLabel";
  [vc.view addSubview:status];
  [NSLayoutConstraint activateConstraints:@[
...
